<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not Completed</string>
    <string name="all_list">All List</string>
    <string name="description">description</string>
    <string name="id">id</string>
    <string name="status">Not Completed</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="fabcontent">fabContent</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
</resources>